--- a/.github/workflows/apptainer_exachem_mpich.yaml
+++ b/.github/workflows/apptainer_exachem_mpich.yaml
@@ -48,8 +48,8 @@ jobs:
               exachem_branch: main
               tamm_branch: main
               folder: apptainer.mpich
-              elpa: y
               scalapack: y
+              elpa: n
     steps:
     - name: Get Instruction
       id: get-simd
