--- a/.github/workflows/apptainer_exachem_mpich.yaml
+++ b/.github/workflows/apptainer_exachem_mpich.yaml
@@ -38,7 +38,7 @@ jobs:
           scalapack:
             - y
           elpa:
-            - n
+            - y
           include:
             - mpich: 4.2.2
               mpich_device: ch4:ucx
@@ -49,7 +49,7 @@ jobs:
               tamm_branch: main
               folder: apptainer.mpich
               scalapack: y
-              elpa: n
+              elpa: y
     steps:
     - name: Get Instruction
       id: get-simd
