--- a/.github/workflows/apptainer_exachem_mpich.yaml
+++ b/.github/workflows/apptainer_exachem_mpich.yaml
@@ -33,6 +33,7 @@ jobs:
             - amd_gfx90a_rocm6.1.3
             - amd_gfx90a_rocm5.7.1
             - amd_gfx90a_rocm5.6
+            - nvidia_70
           ubuntu:
             - jammy
           scalapack:
@@ -45,6 +46,16 @@ jobs:
               ga_runtime: MPI_PROGRESS_RANK
               ubuntu: jammy
               gpu: cpu
+              exachem_branch: main
+              tamm_branch: main
+              folder: apptainer.mpich
+              scalapack: y
+              elpa: y
+            - mpich: 4.2.2
+              mpich_device: ch4:ucx
+              ga_runtime: MPI_PROGRESS_RANK
+              ubuntu: jammy
+              gpu: nvidia_70
               exachem_branch: main
               tamm_branch: main
               folder: apptainer.mpich
