cache base image

--- a/.github/workflows/shifter_exachem.yml
+++ b/.github/workflows/shifter_exachem.yml
@@ -117,6 +117,16 @@ jobs:
           ls -l cache/ ; \
           echo "======" ; \
           fi
+      - name: save docker ubuntu image
+        run: |
+        if [  -f ~/cache/ubuntu_jammy.tar ]; then echo "docker tar found";
+           docker load -i ~/cache/ubuntu_jammy.tar ; \
+        else
+           cd ${{ matrix.folder }} ;\
+           mkdir -p ~/cache ;\
+           docker pull ubuntu:jammy ; \
+           docker save -o ~/cache/ubuntu_jammy.tar ubuntu:jammy
+        fi
       - name: builddate
         id: build-date
         run: |
