--- a/.github/workflows/shifter_exachem.yml
+++ b/.github/workflows/shifter_exachem.yml
@@ -119,13 +119,15 @@ jobs:
           fi
       - name: save docker ubuntu image
         run: |
-          if [  -f ~/cache/ubuntu_jammy.tar ]; then
+          if [  -f ~/cache/myubuntu_jammy.tar ]; then
               echo "docker tar found"
-              docker load -i ~/cache/ubuntu_jammy.tar 
+              docker load -i ~/cache/myubuntu.tar
+              docker images
           else
+              echo "docker tar not found found"
               mkdir -p ~/cache 
-              docker pull ubuntu:jammy 
-              docker save -o ~/cache/ubuntu_jammy.tar ubuntu:jammy
+              docker build -t myubuntu:jammy -f Dockerfile.ubuntu
+              docker save -o ~/cache/myubuntu_jammy.tar myubuntu:jammy
           fi
       - name: builddate
         id: build-date
