--- a/.github/workflows/shifter_exachem.yml
+++ b/.github/workflows/shifter_exachem.yml
@@ -125,8 +125,9 @@ jobs:
               docker images
           else
               echo "docker tar not found found"
-              mkdir -p ~/cache 
+              cd ${{ matrix.folder }}
               docker build -t myubuntu:jammy -f Dockerfile.ubuntu .
+              mkdir -p ~/cache
               docker save -o ~/cache/myubuntu_jammy.tar myubuntu:jammy
           fi
       - name: builddate
