--- a/.github/workflows/shifter_exachem.yml
+++ b/.github/workflows/shifter_exachem.yml
@@ -121,15 +121,18 @@ jobs:
         run: |
           if [  -f ~/cache/myubuntu_jammy.tar ]; then
               echo "docker tar found"
-              docker load -i ~/cache/myubuntu.tar
+              docker load -i ~/cache/myubuntu_jammy.tar
               docker images
           else
               echo "docker tar not found found"
               cd ${{ matrix.folder }}
-              docker build -t myubuntu:jammy -f Dockerfile.ubuntu .
+              docker build -t ghcr.io/edoapra/ubuntu:latest -f Dockerfile.ubuntu .
               mkdir -p ~/cache
-              docker save -o ~/cache/myubuntu_jammy.tar myubuntu:jammy
+              docker save -o ~/cache/myubuntu_jammy.tar ghcr.io/edoapra/ubuntu:latest
+              docker images
           fi
+          echo ${{ secrets.GITHUB_TOKEN }} | docker login gchr.io -u ${{ github.actor }} --password-stdin 
+          docker push ghcr.io/edoapra/ubuntu:latest
       - name: builddate
         id: build-date
         run: |
