--- a/.github/workflows/shifter_exachem.yml
+++ b/.github/workflows/shifter_exachem.yml
@@ -131,7 +131,7 @@ jobs:
               docker save -o ~/cache/myubuntu_jammy.tar ghcr.io/edoapra/ubuntu:latest
               docker images
           fi
-          echo ${{ secrets.GITHUB_TOKEN }} | docker login gchr.io -u ${{ github.actor }} --password-stdin 
+#          echo ${{ secrets.GITHUB_TOKEN }} | docker login gchr.io -u ${{ github.actor }} --password-stdin 
           docker push ghcr.io/edoapra/ubuntu:latest
       - name: builddate
         id: build-date
