pass lowercase ubuntu_tag to fix ExaChem mixed case

--- a/shifter.nersc/Dockerfile
+++ b/shifter.nersc/Dockerfile
@@ -1,8 +1,9 @@
+ARG         UBUNTU_TAG
 ARG         GITHUB_REPOSITORY_OWNER
 ARG         GITHUB_REPOSITORY
 #
 
-FROM ghcr.io/$GITHUB_REPOSITORY/ubuntu:latest
+FROM $UBUNTU_TAG
 
 LABEL maintainer="Edoardo Apra <edoardo.apra@pnnl.gov>"
 
