--- a/.github/workflows/shifter_exachem.yml
+++ b/.github/workflows/shifter_exachem.yml
@@ -122,6 +122,7 @@ jobs:
       - name: save docker ubuntu image
         run: |
           ubuntu_tag=$(echo ghcr.io/${{ github.repository }}/ubuntu:latest| tr '[:upper:]' '[:lower:]')
+          echo "ubuntu_tag=$ubuntu_tag" >> $GITHUB_ENV
           if [  -f ~/cache/myubuntu_jammy.tar ]; then
               echo "docker tar found"
               docker load -i ~/cache/myubuntu_jammy.tar
@@ -154,6 +155,7 @@ jobs:
             CACHE_HIT=${{ env.cache_hit }}
             GITHUB_REPOSITORY_OWNER=${{ github.repository_owner }}
             GITHUB_REPOSITORY=${{ github.repository }}
+            UBUNTU_TAG=${{ env.ubuntu_tag }}
             TAMM_BRANCH=${{ matrix.branch }}
       - name: load and test image
         if: ${{ env.push_truefalse == 'true' }}
