--- a/.github/workflows/shifter_exachem.yml
+++ b/.github/workflows/shifter_exachem.yml
@@ -82,21 +82,15 @@ jobs:
         run: |
           echo "tag=ghcr.io/${{ github.actor }}/${{ env.longnwversion}}" >>  $GITHUB_ENV
         shell: bash
-      - name: push_truefalse
-        id: push_truefalse
+      - name: push_false
+        id: push_false
+        if: ${{ github.event_name == 'pull_request' }}
         run: |
-          docker pull -q alpine
-          echo 'tag ghcr.io/${{ github.repository }}/alpine:mytest'
-          docker tag alpine ${{ env.tag }}:mytest 
-          echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin || true
-          exit_code=0
-          docker push ${{ env.tag }}:mytest || exit_code=$?
-          echo "docker push exit code is $exit_code"
-          if [[ $exit_code == 0 ]]; then
-          echo "push_truefalse=true" >> $GITHUB_ENV
-          else
           echo "push_truefalse=false" >> $GITHUB_ENV
-          fi
+      - name: push_true
+        if: ${{ github.event_name != 'pull_request' }}
+        run: |
+          echo "push_truefalse=true" >> $GITHUB_ENV
         shell: bash
       - name: Login to GitHub Container Registry
         if: ${{ env.push_truefalse == 'true' }}
@@ -124,7 +118,12 @@ jobs:
           ls -l cache/ ; \
           echo "======" ; \
           fi
+      - name: docker ubuntu tag
+        if: ${{ github.event_name == 'pull_request' }}
+        run: |
+          echo "ubuntu_tag=ubuntu:jammy" >> $GITHUB_ENV
       - name: save docker ubuntu image
+        if: ${{ github.event_name != 'pull_request' }}
         run: |
           ubuntu_tag=$(echo ghcr.io/${{ github.repository }}/ubuntu:latest| tr '[:upper:]' '[:lower:]')
           echo "ubuntu_tag=$ubuntu_tag" >> $GITHUB_ENV
