do not push images in a pull request

--- a/.github/workflows/apptainer_exachem.yml
+++ b/.github/workflows/apptainer_exachem.yml
@@ -164,6 +164,7 @@ jobs:
           echo "push_truefalse=false" >> $GITHUB_ENV
       - name: push_true
         if: ${{ github.event_name != 'pull_request' }}
+        run: |
           echo "push_truefalse=true" >> $GITHUB_ENV
         shell: bash
     - name: build an apptainer container
