--- a/.github/workflows/shifter_exachem.yml
+++ b/.github/workflows/shifter_exachem.yml
@@ -89,6 +89,7 @@ jobs:
           echo "push_truefalse=false" >> $GITHUB_ENV
       - name: push_true
         if: ${{ github.event_name != 'pull_request' }}
+        run: |
           echo "push_truefalse=true" >> $GITHUB_ENV
         shell: bash
       - name: Login to GitHub Container Registry
