--- a/.github/workflows/apptainer_exachem_mpich.yaml
+++ b/.github/workflows/apptainer_exachem_mpich.yaml
@@ -237,6 +237,9 @@ jobs:
         if [[ -f ~/cache/mpich/lib/libmpi.a ]]; then \
         echo "mpich cache present" ; \
         fi
+        if [[ -f ~/pmix/etc/pmix-mca-params.conf ]]; then
+        echo "pmix cache present" ; \
+        fi
         if [[ -f ~/cache/libint.tar.bz2 ]]; then \
         echo "libint cache present" ; \
         fi
@@ -288,6 +291,7 @@ jobs:
         mkdir -p ~/cache || true
         cd ${{ matrix.folder }}
         apptainer exec ${{ matrix.folder }}.simg cp -r /opt/mpich ~/cache
+        apptainer exec ${{ matrix.folder }}.simg cp -r /opt/pmix ~/cache/. || true
         apptainer exec ${{ matrix.folder }}.simg ls -l /opt/install/exachem/include || true
         apptainer exec ${{ matrix.folder }}.simg ls -l /opt/install/exachem || true
         apptainer exec ${{ matrix.folder }}.simg tar cjf ~/cache/libint.tar.bz2 /opt/install/exachem/include/libint2/  /opt/install/exachem/include/libint2.hpp /opt/install/exachem/include/libint2.h  /opt/install/exachem/share/libint /opt/install/exachem/lib/cmake/libint2 /opt/install/exachem/lib/libint2.a  /opt/install/exachem/lib/pkgconfig/libint2.pc
