--- a/.github/workflows/apptainer_exachem_mpich.yaml
+++ b/.github/workflows/apptainer_exachem_mpich.yaml
@@ -160,6 +160,18 @@ jobs:
               folder: apptainer.mpich
               scalapack: y
               elpa: n
+            - mpich: aurora
+              mpich_device: ch4:ofi
+              ofi: git
+              cc: icx
+              ga_runtime: MPI_PROGRESS_RANK
+              ubuntu: jammy
+              gpu: intel_gpu_pvc
+              exachem_branch: main
+              tamm_branch: main
+              folder: apptainer.mpich
+              scalapack: y
+              elpa: n
     steps:
     - name: Get Instruction
       id: get-simd
