cleanup & cache updates

--- a/.github/workflows/apptainer_exachem_mpich.yaml
+++ b/.github/workflows/apptainer_exachem_mpich.yaml
@@ -215,26 +215,7 @@ jobs:
       with:
         clean: false
     - name: pkg cleanup
-      run: |
-        df -h
-        if [[ $(uname -s) == "Linux" ]]; then
-        ubuntu_ver=$(cat /etc/os-release | grep VERSION_ID |cut -d \" -f 2)
-        dpkg-query -Wf '${Installed-Size}\t${Package}\n' | sort -n
-        sudo apt-get purge -y azure-cli || true
-        sudo apt-get purge -y google-cloud-cli microsoft-edge-stable  google-chrome-stable firefox
-        sudo apt-get purge -y dotnet-sdk-*
-        sudo apt-get purge -y temurin-*-jdk  openjdk-*
-        sudo apt-get purge -y llvm-*-dev 
-        if [[ $ubuntu_ver == "20.04" ]]; then
-        sudo apt-get purge -y hhvm
-        sudo apt-get purge -y libgl1-mesa-dri
-        fi
-        sudo apt-get -y clean
-        sudo apt-get autoremove -y 
-        dpkg-query -Wf '${Installed-Size}\t${Package}\n' | sort -n
-        df -h
-        fi
-      shell: bash
+      uses: edoapra/ubuntu-pkg-cleanup@main
     - name: Setup cache
       id: setup-cache
       uses: actions/cache@v4
@@ -306,7 +287,7 @@ jobs:
         apptainer exec ${{ matrix.folder }}.simg cp -r /opt/pmix ~/cache/. || true
         apptainer exec ${{ matrix.folder }}.simg ls -l /opt/install/exachem/include || true
         apptainer exec ${{ matrix.folder }}.simg ls -l /opt/install/exachem || true
-        apptainer exec ${{ matrix.folder }}.simg tar cjf ~/cache/libint.tar.bz2 /opt/install/exachem/include/libint2/  /opt/install/exachem/include/libint2.hpp /opt/install/exachem/include/libint2.h  /opt/install/exachem/share/libint /opt/install/exachem/lib/cmake/libint2 /opt/install/exachem/lib/libint2.a  /opt/install/exachem/lib/pkgconfig/libint2.pc
+        apptainer exec ${{ matrix.folder }}.simg tar cjf ~/cache/libint.tar.bz2 /opt/install/exachem/include/libint2/  /opt/install/exachem/include/libint2.hpp /opt/install/exachem/include/libint2.h  /opt/install/exachem/share/libint /opt/install/exachem/lib/cmake/libint2 /opt/install/exachem/lib/libint2.*  /opt/install/exachem/lib/pkgconfig/libint2.pc
         cp ubuntu_${{ matrix.ubuntu }}.sif ~/cache/.
         echo "cache stored"
         ls -l ~/cache
