--- a/.github/workflows/apptainer_exachem_mpich.yaml
+++ b/.github/workflows/apptainer_exachem_mpich.yaml
@@ -268,7 +268,7 @@ jobs:
         sudo mkdir /mnt/tmpdir
         sudo chmod -R uog+rwx /mnt/tmpdir
         echo 'this is a test' > /mnt/tmpdir/test.txt
-        SCALAPACK=${{ matrix.scalapack }} ELPA=${{ matrix.elpa }} OFI=${{ matrix.ofi }} MPICH_DEVICE=${{ matrix.mpich_device }} MPICH=${{ matrix.mpich }} MYUSERNAME=${{ github.actor}}  EXACHEM_BRANCH=${{ matrix.exachem_branch}} TAMM_BRANCH=${{ matrix.tamm_branch}} GPU=${{ matrix.gpu}} CC=${{ matrix.cc }} GA_RUNTIME=${{ matrix.ga_runtime}}  MPI_IMPL=mpich MPICH=${{ matrix.mpich}}  apptainer build --build-arg UBUNTU_VERSION=${{ matrix.ubuntu}} --rocm --fakeroot /mnt/${{ matrix.folder }}.simg  Singularity
+        SCALAPACK=${{ matrix.scalapack }} ELPA=${{ matrix.elpa }} OFI=${{ matrix.ofi }} MPICH_DEVICE=${{ matrix.mpich_device }} MPICH=${{ matrix.mpich }} MYUSERNAME=${{ github.actor}}  EXACHEM_BRANCH=${{ matrix.exachem_branch}} TAMM_BRANCH=${{ matrix.tamm_branch}} GPU=${{ matrix.gpu}} CC=${{ matrix.cc }} GA_RUNTIME=${{ matrix.ga_runtime}}  MPI_IMPL=mpich MPICH=${{ matrix.mpich}}  apptainer build --build-arg UBUNTU_VERSION=${{ matrix.ubuntu}} --rocm --fakeroot /mnt/tmpdir/exachem.simg  Singularity
     - name: builddate
       id: build-date
       run: |
@@ -279,25 +279,25 @@ jobs:
         echo ${{ secrets.GITHUB_TOKEN }} | apptainer registry login -u ${{ github.actor }} --password-stdin oras://ghcr.io
         apptainer remote list
         exit_code=0
-        apptainer push /mnt/${{ matrix.folder }}.simg ${{ env.tag }}:${{ env.date }} || exit_code=$?
-        apptainer push /mnt/${{ matrix.folder }}.simg ${{ env.tag }}:latest|| exit_code+=$?
+        apptainer push /mnt/tmpdir/exachem.simg ${{ env.tag }}:${{ env.date }} || exit_code=$?
+        apptainer push /mnt/tmpdir/exachem.simg ${{ env.tag }}:latest|| exit_code+=$?
     - name: store cache
       if: ${{ (steps.setup-cache.outputs.cache-hit != 'true') && (env.push_truefalse == 'true') }}
       run: |
         mkdir -p ~/cache || true
         cd ${{ matrix.folder }}
-        apptainer exec /mnt/${{ matrix.folder }}.simg cp -r /opt/mpich ~/cache
-        apptainer exec /mnt/${{ matrix.folder }}.simg cp -r /opt/pmix ~/cache/. || true
-        apptainer exec /mnt/${{ matrix.folder }}.simg ls -l /opt/install/exachem/include || true
-        apptainer exec /mnt/${{ matrix.folder }}.simg ls -l /opt/install/exachem || true
-        VER=$(apptainer exec /mnt/${{ matrix.folder }}.simg ls -l /opt/install/exachem/lib/libint2.so.2 |tail |cut -d . -f 5-)
+        apptainer exec /mnt/tmpdir/exachem.simg cp -r /opt/mpich ~/cache
+        apptainer exec /mnt/tmpdir/exachem.simg cp -r /opt/pmix ~/cache/. || true
+        apptainer exec /mnt/tmpdir/exachem.simg ls -l /opt/install/exachem/include || true
+        apptainer exec /mnt/tmpdir/exachem.simg ls -l /opt/install/exachem || true
+        VER=$(apptainer exec /mnt/tmpdir/exachem.simg ls -l /opt/install/exachem/lib/libint2.so.2 |tail |cut -d . -f 5-)
         echo $?
         echo @@@ $VER @@@
         if [  -z $VER ] ; then libint_libs=" /opt/install/exachem/lib/libint2.a"  ; else \
         libint_libs="/opt/install/exachem/lib/libint2.so /opt/install/exachem/lib/libint2.so.2 /opt/install/exachem/lib/libint2.so.$VER"
         fi
         echo libint_libs is $libint_libs
-        apptainer exec /mnt/${{ matrix.folder }}.simg tar cjvf ~/cache/libint.tar.bz2 /opt/install/exachem/include/libint2/  /opt/install/exachem/include/libint2.hpp /opt/install/exachem/include/libint2.h  /opt/install/exachem/share/libint /opt/install/exachem/lib/cmake/libint2 $libint_libs  /opt/install/exachem/lib/pkgconfig/libint2.pc
+        apptainer exec /mnt/tmpdir/exachem.simg tar cjvf ~/cache/libint.tar.bz2 /opt/install/exachem/include/libint2/  /opt/install/exachem/include/libint2.hpp /opt/install/exachem/include/libint2.h  /opt/install/exachem/share/libint /opt/install/exachem/lib/cmake/libint2 $libint_libs  /opt/install/exachem/lib/pkgconfig/libint2.pc
         cp ubuntu_${{ matrix.ubuntu }}.sif ~/cache/.
         echo "cache stored"
         ls -l ~/cache
