--- a/.github/workflows/apptainer_exachem_mpich.yaml
+++ b/.github/workflows/apptainer_exachem_mpich.yaml
@@ -182,7 +182,7 @@ jobs:
         echo "simd=$(./guess_simd.sh)" >> $GITHUB_ENV
     - name: exachem version tag
       run: |
-        if [ ${{ matrix.exachem_branch }} != main ]]; then
+        if [[ ${{ matrix.exachem_branch }} != main ]]; then
            myversion=.${{ matrix.exachem_branch }}
         fi
         myversion+=.${{ matrix.gpu }}
