--- a/.github/workflows/apptainer_exachem_mpich.yaml
+++ b/.github/workflows/apptainer_exachem_mpich.yaml
@@ -240,6 +240,9 @@ jobs:
         if [[ -f ~/cache/libint.tar.bz2 ]]; then \
         echo "libint cache present" ; \
         fi
+        if [[ -f ~/cache/libxc.tar.bz2 ]]; then \
+        echo "libxc cache present" ; \
+        fi
     - name: Install apptainer
       env:
         APP_VER: 1.3.4
@@ -303,6 +306,24 @@ jobs:
         fi
         echo libint_libs is $libint_libs
         apptainer exec /mnt/tmpdir/exachem.simg tar cjvf ~/cache/libint.tar.bz2 /opt/install/exachem/include/libint2/  /opt/install/exachem/include/libint2.hpp /opt/install/exachem/include/libint2.h  /opt/install/exachem/share/libint /opt/install/exachem/lib/cmake/libint2 $libint_libs  /opt/install/exachem/lib/pkgconfig/libint2.pc
+        VER=$(apptainer exec /mnt/tmpdir/exachem.simg ls -l /opt/install/exachem/lib/libxc.so |tail |cut -d . -f 4-)
+        echo $?
+        echo @@@ $VER @@@
+        if [  -z $VER ] ; then libxc_libs=" /opt/install/exachem/lib/libxc.a"  ; else \
+        libxc_libs="/opt/install/exachem/lib/libxc.so /opt/install/exachem/lib/libxc.so.$VER"
+        fi
+        echo libxc_libs is $libxc_libs
+        apptainer exec /mnt/tmpdir/exachem.simg tar cjvf ~/cache/libxc.tar.bz2  $libxc_libs  /opt/install/exachem/lib/pkgconfig/libxc.pc /opt/install/exachem/lib/cmake/Libxc /opt/install/exachem/bin/xc-info \
+        /opt/install/exachem/include/xc.h /opt/install/exachem/include/xc_funcs.h /opt/install/exachem/include/xc_funcs_removed.h /opt/install/exachem/include/xc_funcs_worker.h /opt/install/exachem/include/xc_version.h
+        ELPA_VER=$(apptainer exec /mnt/tmpdir/exachem.simg ls /opt/install/exachem/include/ 2> /dev/null|grep elpa|tail -1 |cut -d - -f 2)
+        if [ ! -z $ELPA_VER ] ; then \
+        libelpa_libs=/opt/install/exachem/lib/libelpa.a
+        VER=$(apptainer exec /mnt/tmpdir/exachem.simg ls -l /opt/install/exachem/lib/libelpa.so |tail |cut -d . -f 4-)
+        VER2=$(echo $VER |cut -d . -f 1)
+        if [ ! -z $VER ]; then libelpa_libs="$libelpa_libs /opt/install/exachem/lib/libelpa.so /opt/install/exachem/lib/libelpa.so.$VER /opt/install/exachem/lib/libelpa.so.$VER2"; fi
+        echo libelpa_libs $libelpa_libs
+        apptainer exec /mnt/tmpdir/exachem.simg tar cjvf ~/cache/libelpa.tar.bz2  /opt/install/exachem/include/elpa-$ELPA_VER /opt/install/exachem/lib/pkgconfig/elpa.pc $libelpa_libs
+        fi
         cp ubuntu_${{ matrix.ubuntu }}.sif ~/cache/.
         echo "cache stored"
         ls -l ~/cache
