--- a/.github/workflows/apptainer_exachem_mpich.yaml
+++ b/.github/workflows/apptainer_exachem_mpich.yaml
@@ -313,8 +313,17 @@ jobs:
         libxc_libs="/opt/install/exachem/lib/libxc.so /opt/install/exachem/lib/libxc.so.$VER"
         fi
         echo libxc_libs is $libxc_libs
-        apptainer exec /mnt/tmpdir/exachem.simg tar cjvf ~/cache/libxc.tar.bz2  $libint_libs  /opt/install/exachem/lib/pkgconfig/libxc.pc /opt/install/exachem/lib/cmake/Libxc /opt/install/exachem/bin/xc-info \
+        apptainer exec /mnt/tmpdir/exachem.simg tar cjvf ~/cache/libxc.tar.bz2  $libxc_libs  /opt/install/exachem/lib/pkgconfig/libxc.pc /opt/install/exachem/lib/cmake/Libxc /opt/install/exachem/bin/xc-info \
         /opt/install/exachem/include/xc.h /opt/install/exachem/include/xc_funcs.h /opt/install/exachem/include/xc_funcs_removed.h /opt/install/exachem/include/xc_funcs_worker.h /opt/install/exachem/include/xc_version.h
+        ELPA_VER=$(apptainer exec /mnt/tmpdir/exachem.simg ls /opt/install/exachem/include/ 2> /dev/null|grep elpa|tail -1 |cut -d - -f 2)
+        if [  -z $ELPA_VER ] ; then \
+        libelpa_libs=/opt/install/exachem/lib/libelpa.a
+        VER=$(apptainer exec /mnt/tmpdir/exachem.simg ls -l /opt/install/exachem/lib/libelpa.so |tail |cut -d . -f 4-)
+        VER2=$(echo $VER |cut -d . -f 1)
+        if [ ! -z $VER ]; then libelpa_libs="$libelpa_libs /opt/install/exachem/lib/libelpa.so /opt/install/exachem/lib/libelpa.so.$VER /opt/install/exachem/lib/libelpa.so.$VER2"; fi
+        echo libelpa_libs $libelpa_libs
+        apptainer exec /mnt/tmpdir/exachem.simg tar cjvf ~/cache/libelpa.tar.bz2  /opt/install/exachem/include/elpa-$ELPA_VER /opt/install/exachem/lib/pkgconfig/elpa.pc $libelpa_libs
+        fi
         cp ubuntu_${{ matrix.ubuntu }}.sif ~/cache/.
         echo "cache stored"
         ls -l ~/cache
