--- a/.github/workflows/apptainer_exachem_mpich.yaml
+++ b/.github/workflows/apptainer_exachem_mpich.yaml
@@ -316,7 +316,7 @@ jobs:
         apptainer exec /mnt/tmpdir/exachem.simg tar cjvf ~/cache/libxc.tar.bz2  $libxc_libs  /opt/install/exachem/lib/pkgconfig/libxc.pc /opt/install/exachem/lib/cmake/Libxc /opt/install/exachem/bin/xc-info \
         /opt/install/exachem/include/xc.h /opt/install/exachem/include/xc_funcs.h /opt/install/exachem/include/xc_funcs_removed.h /opt/install/exachem/include/xc_funcs_worker.h /opt/install/exachem/include/xc_version.h
         ELPA_VER=$(apptainer exec /mnt/tmpdir/exachem.simg ls /opt/install/exachem/include/ 2> /dev/null|grep elpa|tail -1 |cut -d - -f 2)
-        if [  -z $ELPA_VER ] ; then \
+        if [ ! -z $ELPA_VER ] ; then \
         libelpa_libs=/opt/install/exachem/lib/libelpa.a
         VER=$(apptainer exec /mnt/tmpdir/exachem.simg ls -l /opt/install/exachem/lib/libelpa.so |tail |cut -d . -f 4-)
         VER2=$(echo $VER |cut -d . -f 1)
