--- a/.github/workflows/apptainer_exachem_mpich.yaml
+++ b/.github/workflows/apptainer_exachem_mpich.yaml
@@ -44,10 +44,8 @@ jobs:
             - cpu
             - amd_gfx90a_rocm6.3.2
             - amd_gfx90a_rocm6.2.4
-            - amd_gfx90a_rocm6.2
             - amd_gfx90a_rocm6.1.3
             - amd_gfx90a_rocm5.7.1
-            - amd_gfx90a_rocm5.6
             - nvidia_70
             - nvidia_80
           ubuntu:
@@ -57,6 +55,30 @@ jobs:
           elpa:
             - n
           include:
+            - mpich: 3.4.2
+              mpich_device: ch4:ofi
+              ofi: builtin
+              cc: gcc
+              ga_runtime: MPI_PROGRESS_RANK
+              ubuntu: noble
+              gpu: amd_gfx90a_rocm5.7.1
+              exachem_branch: main
+              tamm_branch: main
+              folder: apptainer.mpich
+              scalapack: y
+              elpa: n
+            - mpich: 3.4.2
+              mpich_device: ch4:ofi
+              ofi: builtin
+              cc: gcc
+              ga_runtime: MPI_PROGRESS_RANK
+              ubuntu: noble
+              gpu: amd_gfx90a_rocm6.3.2
+              exachem_branch: main
+              tamm_branch: main
+              folder: apptainer.mpich
+              scalapack: y
+              elpa: n
             - mpich: main
               mpich_device: ch4:ofi
               ofi: builtin
