--- a/.github/workflows/apptainer_exachem_mpich.yaml
+++ b/.github/workflows/apptainer_exachem_mpich.yaml
@@ -42,10 +42,6 @@ jobs:
             - MPI_PROGRESS_RANK
           gpu:
             - cpu
-            - amd_gfx90a_rocm6.3.2
-            - amd_gfx90a_rocm6.2.4
-            - amd_gfx90a_rocm6.1.3
-            - amd_gfx90a_rocm5.7.1
             - nvidia_70
             - nvidia_80
           ubuntu:
@@ -55,6 +51,30 @@ jobs:
           elpa:
             - n
           include:
+            - mpich: 3.4.2
+              mpich_device: ch4:ofi
+              ofi: builtin
+              cc: gcc
+              ga_runtime: MPI_PROGRESS_RANK
+              ubuntu: noble
+              gpu: cpu
+              exachem_branch: main
+              tamm_branch: main
+              folder: apptainer.mpich
+              scalapack: y
+              elpa: y
+            - mpich: 3.4.2
+              mpich_device: ch4:ofi
+              ofi: git
+              cc: gcc
+              ga_runtime: MPI_PROGRESS_RANK
+              ubuntu: noble
+              gpu: cpu
+              exachem_branch: main
+              tamm_branch: main
+              folder: apptainer.mpich
+              scalapack: y
+              elpa: y
             - mpich: 3.4.2
               mpich_device: ch4:ofi
               ofi: builtin
