--- a/.github/workflows/apptainer_exachem_mpich.yaml
+++ b/.github/workflows/apptainer_exachem_mpich.yaml
@@ -57,12 +57,12 @@ jobs:
               cc: gcc
               ga_runtime: MPI_PROGRESS_RANK
               ubuntu: noble
-              gpu: cpu
+              gpu: amd_gfx90a_rocm6.3.2
               exachem_branch: main
               tamm_branch: main
               folder: apptainer.mpich
               scalapack: y
-              elpa: y
+              elpa: n
             - mpich: 3.4.2
               mpich_device: ch4:ofi
               ofi: git
